// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpensesSummary should render correctly  1`] = `<div />`;

exports[`ExpensesSummary should render correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     expenses
     totaling   
    $94.34
  </h1>
</div>
`;

exports[`ExpensesSummary should render correctly with one expense   1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totaling   
    $1.95
  </h1>
</div>
`;
